# spdmapplib

./: CMakeLists.txt  LICENSE  README.md  exportlist.txt  libspdm-build.sh  meson.build  meson_options.txt  spdmapplib.pc.in
include/: spdm_self_test.hpp  spdmapplib.hpp  spdmapplib_common.hpp  spdmapplib_errorcodes.hpp  spdmapplib_impl.hpp  spdmapplib_requester_impl.hpp  spdmapplib_responder_impl.hpp  spdmtransport.hpp  spdmtransport_mctp.hpp
sample_spdm_requester/: meson.build  spdm_requester.cpp  util.cpp
spdm_bmc_secret_lib/: meson.build
spdm_bmc_secret_lib/include/: spdm_bmc_secret_lib.h
spdm_bmc_secret_lib/src/: cert.c  lib.c
spdm_transport_none_lib/: common.c  meson.build  none.c
src/: spdm_self_test.cpp  spdmapplib.cpp  spdmapplib_common.cpp  spdmapplib_requester_impl.cpp  spdmapplib_responder_impl.cpp  spdmtransport_mctp.cpp  util.cpp
subprojects/: mctpwplus.wrap
subprojects/boost/: meson.build
subprojects/libspdm/: 0001-Fix-build-issue.patch  0003-Rename-cplusplus-keywords.patch  0003-spdm-cpp.patch  0004-Add-spdm-emu-transport-none-lib.patch  libspdm.mri
utility/: CMakeLists.txt  spdm_requester.cpp  util.cpp
